Change styles - content

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,5 +1,5 @@
 <!-- <body (click)="autocomplete1_Off()" (click)="autocomplete2_Off()"> -->
-    <div class="content">
+    <div class="content1">
         <div [ngClass]="{'popup': this.fetchDataStatus == 1, 'hideItem' : this.fetchDataStatus == 0}">
             <div class="progressBar"><mat-spinner></mat-spinner></div>
         </div>
@@ -58,5 +58,10 @@
             </div>
         </div>
     </div>
+
+    <div class="content2">
+        <div class="header2"> Airline tickets for over 100 airlines in one place</div>
+        <div class="header3">Fast and convenient search engine for air connections</div>
+        </div>
     
 <!-- </body> -->
