--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -62,6 +62,11 @@
     <div class="content2">
         <div class="header2"> Airline tickets for over 100 airlines in one place</div>
         <div class="header3">Fast and convenient search engine for air connections</div>
-        </div>
+    </div>
+
+    <div class="content3">
+        Content 3
+
+    </div>
     
 <!-- </body> -->
