--- a/src/app/content/content.component.scss
+++ b/src/app/content/content.component.scss
@@ -30,7 +30,7 @@ $font-family_3: "Roboto", sans-serif;
     margin: 0;
     height: 100%;
     width: 100%;
-    margin: 0, auto;
+    margin: auto;
     background-color: rgb(0, 0, 0);
     opacity: 0.6;
     z-index: 1;
@@ -135,6 +135,7 @@ $font-family_3: "Roboto", sans-serif;
                         .flyFromValAutocomplete :hover{
                             cursor: pointer;
                             background-color: #bc7676;
+                            transition-duration: 0.5s;
                         }
                     }
                     .sb1Box2{
@@ -205,6 +206,7 @@ $font-family_3: "Roboto", sans-serif;
                         .flyToValAutocomplete :hover{
                             cursor: pointer;
                             background-color: #bc7676;
+                            transition-duration: 0.5s;
                         }
                     }
                     .sb1Box5{
@@ -298,6 +300,15 @@ $font-family_3: "Roboto", sans-serif;
             font-weight: 300;
             text-align: justify;
         }
+    }
+
+    .content3{
+        margin: auto;
+        height: fit-content;
+        display: flex;
+        justify-content: center;
+        max-width: 1280px;
+        padding: 20px 0px 20px 0px;
     }
 
         @media screen and (max-width: 992px){
