new logo - start to build new layout

--- a/src/app/content/content.component.scss
+++ b/src/app/content/content.component.scss
@@ -10,6 +10,7 @@ $font-family_3: "Roboto", sans-serif;
 
 .hideItem{
     display: none;
+    transition-duration: 0.5s;
 }
 
 .content1{
@@ -122,6 +123,7 @@ $font-family_3: "Roboto", sans-serif;
                             width: 350px;
                             z-index: 1;
                             padding-top: 3px;
+                            transition-duration: 0.5s;
                         }
 
                         .flyFromValAutocomplete{
@@ -131,6 +133,7 @@ $font-family_3: "Roboto", sans-serif;
                             height: fit-content;
                             background-color: #ffffff;
                             z-index: 2;
+                            transition-duration: 0.5s;
                         }
                         .flyFromValAutocomplete :hover{
                             cursor: pointer;
