--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -19,11 +19,15 @@ header{
 
     .logoArea{
         width: 20%;
+        height: 100%;
+        display: flex;
+        align-items: center;
     }
 
     .logo{
-        height: 90px;
-        width: 90px;
+
+        height: 50px;
+        width: 180px;
     }
 
     .rwdButton{
@@ -52,12 +56,12 @@ header{
     }
 
     .topMenuItem:hover{
-        color: #ff9d00;
+        color: #009dff;
         transition: 0.5s;
 
     }
     .topMenuItem_active{
-        color: #ff9d00;
+        color: #009dff;
     }
 }
 
