--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -11,7 +11,7 @@ $font-family_1:  Cursive, Helvetica, sans-serif;
 
 header{
     max-width: 1280px;
-    height: 90px;
+    height: 70px;
     margin: auto;
     display: flex;
     flex-direction: row;
@@ -25,9 +25,8 @@ header{
     }
 
     .logo{
-
-        height: 50px;
-        width: 180px;
+        height: 60px;
+        width: 150px;
     }
 
     .rwdButton{
@@ -48,20 +47,20 @@ header{
         cursor: pointer;
         padding-left: 15px;
         font-size: 25px;
-        font-weight: 600;
         font-family: $font-family_1 ;
         color: $font-color_1;
         text-decoration: none;
+        font-weight: bolder;
         transition: 0.5s;
     }
 
     .topMenuItem:hover{
-        color: #009dff;
+        color: rgb(75, 145, 241);
         transition: 0.5s;
 
     }
     .topMenuItem_active{
-        color: #009dff;
+        color: rgb(75, 145, 241);
     }
 }
 
@@ -80,8 +79,8 @@ header{
         flex-direction: row;
         }
         .logo{
-            width: 50%;
-            order: 1;
+        width: 50%;
+        order: 1;
         }
         .rwdButton{
             cursor: pointer;
