--- a/src/app/content/content.component.scss
+++ b/src/app/content/content.component.scss
@@ -14,6 +14,9 @@ $font-family_3: "Roboto", sans-serif;
 }
 
 .content1{
+    margin: auto;
+    display: flex;
+    justify-content: center;
     min-height: calc(100vh - 60px);
     width: 100%;
     background: linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.271) 100%),
@@ -49,7 +52,7 @@ $font-family_3: "Roboto", sans-serif;
 }
 
 #header1{
-    padding-top: 20px;
+    padding-bottom: 20px;
     font-family: $font-family_2;
     // font-family: "Arial Black", Gadget, sans-serif;
     font-size: 50px;
@@ -66,7 +69,6 @@ $font-family_3: "Roboto", sans-serif;
 
     .searchPanel{
         margin: auto;
-        padding: 50px 0px 120px 0px;
         display: flex;
         flex-direction: column;
         width: 850px;
