--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -53,7 +53,7 @@ header{
         font-family: $font-family_4;
         color: $font-color_1;
         text-decoration: none;
-        font-weight: 800;
+        font-weight: bold;
         transition: 0.5s;
     }
 
